<resources>
    <string name="app_name">Аква Детейлинг</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="CarWashing">Мойка стандарт</string>
    <string name="ChemicalCleaningSalon">Химчистка слона</string>
    <string name="NanoCeramics">Нанесение Нанокерамики</string>
    <string name="Polishing">Полировка</string>
    <string name="CarWashing_3Phases">3-х фазная мойка</string>
    <string name="ProtectiveFilm">Поклейка пленки</string>
    <string name="RepairWindshield">Ремонт стекла</string>
    <string name="SalonProtection">Защита салона</string>
    <string name="Toning">Тонировка</string>
    <string name="TireFitting">Шиномонтаж</string>
    <string name="date">Дата:</string>
    <string name="addOrder">Запись клиента:</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="names">
        <item>3-х ФАЗНАЯ МОЙКА</item>
        <item>МОЙКА СТАНДАРТ</item>
        <item>РЕМОНТ СТЕКОЛ</item>
        <item>ПОЛИРОВКА</item>
        <item>НАНОКЕРАМИКА</item>
        <item>ЗАЩИТНАЯ ПЛЕНКА</item>
        <item>ХИМЧИСТКА САЛОНА</item>
        <item>ЗАЩИТА САЛОНА</item>
        <item>ШИНОМОНТАЖ</item>
        <item>ТОНИРОВКА</item>
    </string-array>
    <string-array name="boxes">
        <item>Выберите бокс:</item>
        <item>БОКС №1</item>
        <item>БОКС №2</item>
        <item>БОКС №3</item>
        <item>БОКС №4</item>
        <item>БОКС №5</item>
    </string-array>
</resources>


