<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">
    <item
        android:id="@+id/carWashing_3Phases"
        android:title="@string/CarWashing_3Phases"/>
    <item
        android:id="@+id/carWashing"
        android:title="@string/CarWashing"/>
    <item
        android:id="@+id/chemicalCleaningSalon"
        android:title="@string/ChemicalCleaningSalon"/>
    <item
        android:id="@+id/nanoCeramics"
        android:title="@string/NanoCeramics"/>
    <item
        android:id="@+id/polishing"
        android:title="@string/Polishing"/>
    <item
        android:id="@+id/protectiveFilm"
        android:title="@string/ProtectiveFilm"/>
    <item
        android:id="@+id/repairWindshield"
        android:title="@string/RepairWindshield"/>
    <item
        android:id="@+id/salonProtection"
        android:title="@string/SalonProtection"/>
    <item
        android:id="@+id/toning"
        android:title="@string/Toning"/>
    <item
        android:id="@+id/tireFitting"
        android:title="@string/TireFitting"/>
</menu>