<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/CarWashing_3Phases"
    android:title="@string/CarWashing_3Phases"/>
    <item
        android:id="@+id/CarWashing"
        android:title="@string/CarWashing"/>
    <item
        android:id="@+id/ChemicalCleaningSalon"
        android:title="@string/ChemicalCleaningSalon"/>
    <item
        android:id="@+id/NanoCeramics"
        android:title="@string/NanoCeramics"/>
    <item
        android:id="@+id/Polishing"
        android:title="@string/Polishing"/>
    <item
        android:id="@+id/ProtectiveFilm"
        android:title="@string/ProtectiveFilm"/>

    <item
        android:id="@+id/RepairWindshield"
        android:title="@string/RepairWindshield"/>
    <item
        android:id="@+id/SalonProtection"
        android:title="@string/SalonProtection"/>
    <item
        android:id="@+id/Toning"
        android:title="@string/Toning"/>
    <item
        android:id="@+id/TireFitting"
        android:title="@string/TireFitting"/>
    <item
        android:id="@+id/regular_customer"
        android:title="Стать постоянным клиентом"/>

    <!--       app:showAsAction="always"/>-->
<!--    <item android:id="@+id/action_today"-->
<!--        android:title="action_today"-->
<!--        android:orderInCategory="100"-->
<!--        app:showAsAction="always"/>-->
    <item
        android:title="Calendar"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_date_range_purple_24dp">
        <menu>
            <item
                android:id="@+id/day_1"
                android:title="oneDay"
                android:icon="@drawable/ic_filter_1_blue_grey_600_24dp_lp"
                app:showAsAction="always"/>
            <item
                android:id="@+id/days_3"
                android:title="threeDay"
                android:icon="@drawable/ic_filter_3_blue_grey_600_24dp_lp"
                app:showAsAction="always"/>
            <item
                android:id="@+id/week"
                android:title="sevenDay"
                android:icon="@drawable/ic_filter_7_blue_grey_600_24dp_lp"
                app:showAsAction="always"/>
        </menu>
    </item>
    <item
        android:id="@+id/enter_register"
        android:title="enter register"
        android:icon="@drawable/ic_person_blue_grey_400_24dp"
        app:showAsAction="always"
        android:orderInCategory="2"/>
</menu>